fix: text-wrap: nowrap -> white-space: pre

--- a/src/element.scss
+++ b/src/element.scss
@@ -311,6 +311,7 @@ code {
                 display: grid;
 
                 text-wrap: nowrap;
+                white-space: pre;
 
                 .icon,
                 .label,
